[package]
name = "minijinja-js"
version = "2.18.0"
description = "a powerful template engine with minimal dependencies"
publish = false
edition = "2021"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
rust-version = "1.70"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doc = false
doctest = false
test = false

[features]
default = ["console_error_panic_hook"]

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(target_family="wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.47"

[dependencies]
minijinja = { version = "2.18.0", default-features = false, features = [
    "serde",
    "unstable_machinery",
] }
minijinja-contrib = { version = "2.18.0", default-features = false }
fragile = "2.0.0"
js-sys = "0.3.77"
serde-wasm-bindgen = "0.6.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    '-Oz',
    '--strip-debug',
    '--strip-dwarf',
    '--strip-producers',
    '--dce',
    '--enable-bulk-memory',
    '--enable-nontrapping-float-to-int',
]
